src/Fusion.Summary.Api/Deployment/k8s/deployment-ingress-prod.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: summary-api-fusiondev-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.org/client-max-body-size: "50m"
    nginx.ingress.kubernetes.io/client-max-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: ingress-nginx-fusiondev
  tls:
  - hosts:
    - fra-summary.api.fusion-dev.net
    secretName: wildcard-fusiondev-tls-cert
  rules:
    - host: fra-summary.api.fusion-dev.net
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: summary-api
              port:
                number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: summary-api-equinor-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.org/client-max-body-size: "50m"
    nginx.ingress.kubernetes.io/client-max-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: ingress-nginx-equinor
  tls:
  - hosts:
    - fra-summary.api.fusion.equinor.com
    secretName: wildcard-equinor-tls-cert
  rules:
    - host: fra-summary.api.fusion.equinor.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: summary-api
              port:
                number: 80
